--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Min Portfolio!</title>
     <link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
 
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
@@ -41,8 +42,6 @@
                     </ul>
                 </div>
             </div>
-
-
         </div>
     </nav>
 
@@ -124,18 +123,22 @@
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                 </div>
 
@@ -144,18 +147,22 @@
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                 </div>
 
@@ -164,18 +171,22 @@
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
+                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                 </div>
             </section>
