--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Min Portfolio!</title>
     <link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
 
-
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
+
 
 
 </head>
@@ -59,6 +61,100 @@
             </section>
         </div>
     </div>
+
+
+
+
+    <!--modal - kyoto-->
+    <div id="animatedModal">
+        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
+        <div class="close-animatedModal">
+            <img src="img/closebt.svg" alt="lukkeknap" class="center-block lukke_knap">
+        </div>
+
+        <div class="modal-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="img/kyoto_billede_fullscreen.png" alt="Kyoto" class="img-responsive">
+                        <h1 class="text-center display-1" style="color:white; margin-bottom:2vw;"> <u>Tema 1 - Basic web: Redesign – Kyoto</u></h1>
+                        <h4 style="color:white;"><strong>Formålet:</strong> Redesign af selvvalgt virksomhed</h4>
+                        <p style="color:white;"><strong>Opgave:</strong> “I skal vælge én af de fire case virksomheder og re­designe deres webside. Jeres løsning skal være responsiv og indeholde de informationer som allerede findes på siden , men må gerne være helt nyt i forhold til design og organisering af informationerne. Jeres løsning skal tage udgangspunkt i en analyse af det eksisterende site samt en test af websiden. Projektet skal ligeledes afsluttes med en test af jeres redesignede website.”</p>
+                        <br>
+
+                        <h4 style="color:white;">Valg af hjemmeside</h4>
+                        <p style="color:white;">Vi skulle i grupper á 4 mand vælge en hjemmeside som skulle redesignes. Vi besluttede at vælge kyoto da dens design ikke er særligt gennemtænk og vi troede vi kunne lave gode forandringer. Man kunne ikke se menuerne pga. splashbilledet forskellige “farver”. overordnet var hjemmesiden UX dårlig og ikke særlig inspirerende eller spændende.</p>
+                        <br>
+
+                        <h4 style="color:white;">I vores proces skulle vi komme ind på følgende ting:</h4>
+                        <ul style="color:white;">
+                            <li>Analyse af eksisterende hjemmeside</li>
+                            <li>Persona</li>
+                            <li>idegenerering</li>
+                            <li>wireframes</li>
+                            <li>styletile</li>
+                            <li>layoutdiagrammer</li>
+                            <li>En test af vores hjemmesiden</li>
+                            <li>justeringer til hjemmesiden</li>
+                            <li>Rapport</li>
+                        </ul>
+                        <br>
+
+                        <h2 style="color:white;">Wireframes</h2>
+                        <img src="img/wireframes_kyoto_papir.PNG" alt="Wireframes af kyoto" class="img-responsive">
+
+                        <div class="col-md-12" style="margin-bottom:2vw;">
+                            <h2 style="color:white;">Layoutdiagram</h2>
+                            <div class="col-md-6">
+                                <h3 style="color:white;">Home</h3>
+                                <img src="img/layoutdiagram_home.PNG" alt="Layoutdiagram for home" class="img-responsive" style="max-width:94%;">
+                            </div>
+                            <div class="col-md-6">
+                                <h3 style="color:white;">About</h3>
+                                <img src="img/layoutdiagram_about.PNG" alt="Layoutdiagram for about" class="img-responsive">
+                            </div>
+
+                            <div class="col-md-6">
+                                <h3 style="color:white;">Contact</h3>
+                                <img src="img/layoutdiagram_kontakt.PNG" alt="Layoutdiagram for contact" class="img-responsive" style="max-width:90%;">
+                            </div>
+                            <div class="col-md-6">
+                                <h3 style="color:white;">Brands & Catalog</h3>
+                                <img src="img/layoutdiagram_about.PNG" alt="Layoutdiagram for brand & catalog" class="img-responsive">
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-12" style="margin-bottom:2vw;">
+                            <div class="col-md-6">
+                                <h3 style="color:white;"><u>Inden Redesign</u></h3>
+                                <img src="img/kyotoforside.jpg" alt="Kyoto forside" class="img-responsive">
+                            </div>
+
+                            <div class="col-md-6">
+                                <h3 style="color:white;"><u>Efter Redesign</u></h3>
+                                <img src="img/voresforside.jpg" alt="Vores forside" class="img-responsive">
+                            </div>
+                        </div>
+                        <div class="col-md-12" style="margin-bottom:2vw;">
+                            <h3 style="color:white;">Beskrievelse af redesignet</h3>
+                            <p style="color:white;">Vores kommunikative fremstående på websitet er minimalistisk, relevantog kortfattet. Vi prøver samt at arbejde med vores intention med at få dem ned i butikken og følge dem på de sociale medier og at man kan se hvad for noget tøj de i butikken har. Vi har arbejdet meget med at vi skal have det samme layout der skal køre ens over de diverse sider for at skabe en decideret rød tråd, som man kan se på hjemmesiden og vores styleguide. Samt skabt kyoto en identitetsfarve, da vi syntes at det faldt igennem og at man ikke kunne se på forsiden at det rigtigt var en tøj butik. Det er derfor vi har tøjet i fokus på forsiden Med kompositionen har vi arbejdet meget med deres sociale medier opslag ikke fylder det hele, men at vi har gjort at der er fremhævet et opslag også kan man se de seneste 4 opslag. Samt er det opstillet på en symmetrisk måde, hvilket går igennem hele websitet.</p>
+                            <br>
+                            <a href="http://sebstorm.dk/kea/html/uge39/kyoto/site/index.html">Link til website - koden er "kea" i begge felter</a>
+                            <br>
+                            <br>
+                            <a href="http://sebstorm.dk/kea/html/uge39/analyse/Analyseopgave_Kyoto.pdf">Link til rapport</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
     <div class="container">
         <section id="Om">
@@ -113,30 +209,25 @@
         </section>
     </div>
 
-
     <h1 class="text-center display-1" style="color:white; margin-bottom:2vw; margin-top:5vw;"> Portfolio</h1>
     <div class="container-fluid">
         <div class="row">
             <section id="Portfolio">
                 <!-- Række 1 -->
                 <div class="raekke_1">
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
+                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
+                        <img src="img/kyotobillede.png" alt="kyoto thumbnail" class="img-responsive portfolio_venstre runde_kanter">
+                        <h4 class="text-center titel_portfolio"> Kyoto - Redesign</h4>
+                        <!--Call your modal-->
+                        <button id="kyoto" href="#animatedModal" type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
+                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                         <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
+                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                         <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
@@ -144,51 +235,24 @@
 
                 <!-- Række 2 -->
                 <div class="raekke_2">
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
+                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                         <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
+                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                         <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
+                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                         <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
                     </div>
                 </div>
 
-                <!-- Række 3 -->
-                <div class="raekke_3">
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                </div>
+
             </section>
         </div>
     </div>
@@ -290,9 +354,12 @@
         </div>
     </div>
 
+
+
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-    <script src=" https://code.jquery.com/jquery-3.1.1.min.js "></script>
-    <script src="bootstrap/js/bootstrap.min.js "></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="js/animatedModal.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js.js "></script>
 </body>
 
