--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
             <section id="Forside">
                 <div class="col-md-12 splashbillede">
                     <h1 class="typing_carousel">Velkommen, mit navn er Sebastian <br>
-                    <span
-                    class="txt-rotate"
-                    data-period="500"
-                    data-rotate='[ "Jeg designer hjemmesider.", "Jeg koder hjemmesider.", "Jeg bygger prototyper." ]'></span>
-                </h1>
+                        <span class="txt-rotate" data-period="500" data-rotate='[ "Jeg designer hjemmesider.", "Jeg kan kode front end.", "Jeg kan kode backend." ]'></span>
+                    </h1>
                 </div>
             </section>
         </div>
@@ -65,27 +62,29 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 hojre_om">
                     <h1 class="text-center display-1" style="color:white;"> Om mig</h1>
-                    <h2 style="color:white">Jeg studerer som multimediedesigner på København Erhvervsakademi</h2>
-                    <p style="color:white;">Når jeg ikke studere som multimediedesigner er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.
+                    <h2 style="color:white" class="omMig_h2">Jeg studerer som Webudvikler på København Erhvervsakademi</h2>
+                    <p style="color:white;">Når jeg ikke studere som Webudvikler er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.
+                        <br>
+                        <br>Jeg har en uddannelse som multimediedesigner på Københavns Erhvervsakademi, hvor jeg specialiserede mig i front end kodning. I min tid som multimediedesigner var jeg også i praktik hos BetterHome hvor jeg fik til opgave at opretholde og updater deres hjemmeside og applikationer
                         <br>
                         <br> Før jeg startede på MMD var jeg 3 måneder i Miami, USA hvor jeg var praktikant hos Best Doctors. Jeg arbejdede sammen med deres multimediedesigner hvor jeg fik lov til at komme med feedback og forbedringer til deres apps. Det en grænseoverskridende oplevelese at være væk fra de trygge ramme men jeg lærte en hel masse, ren teknisk, menneskeligt og hvordan kulturen er i USA, især hvilken kultur latinamerikanerne har
                         <br>
-                        <br> I Marts 2017 fik jeg muligheden for at lave en lille webshop for <a target="_blank" href="https://www.collectorshome.dk/">CollectorsHome</a>. Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. I dag er jeg webansvarlig og har til ansvar til driften af hjemmeside.
-                        <br>
-                        <br>
-                        <blockquote class="blockquote">
-                            <p class="mb-0" style="color:white"> <em>“At vove, er at miste fodfæstet et øjeblik - ikke at vove er at miste sig selv” - Søren Kierkegaard</em></p>
-                            <footer class="blockquote-footer" style="color:white"> <cite title="Source Title">Søren Kierkegaard</cite></footer>
-                        </blockquote>
+                        <br> I Marts 2017 fik jeg muligheden for at lave en lille webshop for <a target="_blank" href="https://www.collectorshome.dk/">CollectorsHome</a>. Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. I dag er jeg webansvarlig og har til ansvar til driften af hjemmesiden.
                     </p>
+                    <blockquote class="blockquote">
+                        <p class="mb-0" style="color:white"> <em>“At vove, er at miste fodfæstet et øjeblik - ikke at vove er at miste sig selv” - Søren Kierkegaard</em></p>
+                        <footer class="blockquote-footer" style="color:white"> <cite title="Source Title">Søren Kierkegaard</cite></footer>
+                    </blockquote>
+
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <img src="img/mig.jpg" alt="mig" class="img-responsive mig">
+                    <img src="img/skrivebord2.jpg" alt="Mit skrivebord" class="img-responsive center-block skrivebord2">
                 </div>
             </div>
 
-            <div class="row" style="margin-top:5vw;">
-                <div class="col-md-4 col-sm-4 col-xs-4">
+            <!-- <div class="row" style="margin-top:5vw;">
+                <div class="col-md-4 col-sm-4 col-xs-12">
                     <h2 style="color:white;">Front end Udvikler</h2>
                     <ul class="FrontEnd_Design_beskrivelse" style="color:white">
                         <li>Html</li>
@@ -95,10 +94,10 @@
                         <li>Vredesudbrud mod computer </li>
                     </ul>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-4">
+                <div class="col-md-4 col-sm-4 col-xs-12">
                     <img src="img/diagram2.png" alt="Diagram over front end og Designer" class="img-responsive diagram_overblik">
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-4">
+                <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="hojre_design_diagram">
                         <h2 style="color:white;">Designer</h2>
                         <ul class="FrontEnd_Design_beskrivelse" style="color:white">
@@ -109,53 +108,62 @@
                     </div>
                 </div>
 
-            </div>
+            </div> -->
         </section>
     </div>
 
-    <h1 class="text-center display-1" style="color:white; margin-bottom:2vw; margin-top:5vw;"> Portfolio</h1>
-    <div class="container-fluid">
+    <h1 class="text-center display-1" style="color:white; margin-bottom:2vw; margin-top:5vw;"> Portfolio - Multimediedesigner</h1>
+    <div class="container">
         <div class="row">
             <section id="Portfolio">
                 <!-- Række 1 -->
                 <div class="raekke_1">
                     <a href="kyoto.html">
-                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
-                            <img src="img/kyotobillede.png" alt="kyoto thumbnail" class="img-responsive portfolio_venstre runde_kanter">
-                            <h4 class="text-center titel_portfolio"> Kyoto - Redesign</h4>
-                            <!--Call your modal-->
-                            <button id="kyoto" href="#" type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
+                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding" style="margin-bottom:2vw">
+                            <img src="img/thumbnails_portfolio_kyoto.png" alt="kyoto thumbnail" class="img-responsive portfolio_venstre runde_kanter">
+                            <h3 class="text-center titel_portfolio"> Kyoto</h3>
                         </div>
                     </a>
-                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
+
+                    <a href="sexsamfund.html">
+                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding" style="margin-bottom:2vw">
+                            <img src="img/thumbnails_portfolio_sexSamfund.png" alt="sex & samfund thumbnail" class="img-responsive portfolio_midt runde_kanter">
+                            <h3 class="text-center titel_portfolio"> Sex & Samfund</h3>
+                        </div>
+                    </a>
+
+                    <a href="fermLiving.html">
+                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding" style="margin-bottom:2vw">
+                            <img src="img/thumbnails_portfolio_fermLiving.png" alt="Ferm Living thumbnail" class="img-responsive portfolio_hojre runde_kanter">
+                            <h3 class="text-center titel_portfolio"> Ferm Living</h3>
+                        </div>
+                    </a>
+
                 </div>
 
                 <!-- Række 2 -->
                 <div class="raekke_2">
-                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding">
-                        <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
-                        <h4 class="text-center titel_portfolio"> Titel</h4>
-                        <button type="button" class="btn btn-light center-block" style="margin-bottom:2vw;">Læs mere</button>
-                    </div>
+
+                    <a href="verdenshjornet.html">
+                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding" style="margin-bottom:2vw">
+                            <img src="img/thumbnails_portfolio_verdenshjornet.png" alt="Verdenshjørnet" class="img-responsive portfolio_venstre runde_kanter">
+                            <h3 class="text-center titel_portfolio"> Verdenshjørnet</h3>
+                        </div>
+                    </a>
+
+                    <a href="kobenhavnerture.html">
+                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding" style="margin-bottom:2vw">
+                            <img src="img/thumbnails_portfolio_kobenhavnerture.png" alt="Københavnerture thumbnail" class="img-responsive portfolio_midt runde_kanter">
+                            <h3 class="text-center titel_portfolio"> Københavnerture</h3>
+                        </div>
+                    </a>
+
+                    <a href="mitfuckingvalg.html">
+                        <div class="col-md-4 col-sm-4 col-xs-6 portfolio_padding" style="margin-bottom:2vw">
+                            <img src="img/thumbnails_portfolio_Fvalg.png" alt="Mit fucking valg thumbnail" class="img-responsive portfolio_hojre runde_kanter">
+                            <h3 class="text-center titel_portfolio"> #MitFuckingValg</h3>
+                        </div>
+                    </a>
                 </div>
 
 
@@ -164,7 +172,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row" style="margin-top:2vw;">
             <section id="Kontakt">
                 <h1 class="text-center display-1" style="color:white; margin-bottom:2vw">Kontakt</h1>
                 <div class="wrapper_om col-md-10 col-md-push-1 col-sm-10 col-sm-push-1">
@@ -184,14 +192,14 @@
                             <h3 class="text-center" style="color:black"> <strong> <em>Sebastian Storm </em> </strong></h3>
                             <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Kea - Multimediedesigner</em> </strong></h3>
                             <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Bopæl: Kokkedal </em> </strong></h3>
-                            <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Alder: 23 år </em> </strong></h3>
+                            <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Alder: 24 år </em> </strong></h3>
                         </div>
 
                         <div class="box_om col-md-12 col-sm-12" style="height:40px; background-color:#566b62"> </div>
-                        <h2 class="text-center" style="color:black; margin-top:5vw;"> <strong>CV</strong> </h2>
+                        <h2 class="text-center" style="color:black; margin-top:3.5vw;"> <strong>CV</strong> </h2>
                         <div class="unik">
                             <h3 class="text-center">Hvad er det som gør mig unik?</h3>
-                            <p class="col-md-8 col-md-offset-4 col-md-pull-2 col-sm-8 col-sm-offset-4 col-sm-pull-2" style="margin-bottom:2vw;">Jeg har gået I en kompetence klasse siden jeg var helt lille, hvor jeg fik besked at jeg nok ikke kunne gennemfører en folkeskole uddannelse og slet ikke en gymnasieuddannelse. Men fra helt lille har jeg været målbevidst (som nok kommer fra fodbolden), og ingen skulle fortælle mig hvad jeg ikke kunne. I dag har jeg en htx uddannelse og er startet på min drømmeuddannelse. Så det som gør mig unik er at jeg er en fighter som er målbevidst, stædig og udholdende og er derudover lærenem indenfor multimedie-verdenen.</p>
+                            <p class="col-md-8 col-md-offset-4 col-md-pull-2 col-sm-8 col-sm-offset-4 col-sm-pull-2" style="margin-bottom:2vw;">Fra da jeg var helt lille har jeg været målbevidst (som nok kommer fra fodbolden), og ingen skulle fortælle mig hvad jeg ikke kunne. Jeg er god i både gruppearbejde og når der skal laves selvstændigt arbejde. Så det som gør mig unik er at jeg er en fighter som er målbevidst, stædig og udholdende og er derudover lærenem indenfor multimedie-verdenen.</p>
                         </div>
 
                         <div class="profil col-md-4 col-sm-4">
@@ -200,10 +208,11 @@
                             <p>Allerede I folkeskolen begyndte jeg at interessere mig for IT og Design hvor jeg eksperimenteret med design af forskellige ting og hvordan man kunne kode ved hjælp af html. På htx specialiserede jeg mig i kommunikation/IT & Design. Allerede der lærte jeg programmer såsom photoshop, dreamweaver osv. Derudover lærte jeg forskellige designteorier. Jeg ser mig selv som lidt af en “nørd” , da jeg er nysgerrig efter hele tiden at lære mere omkring html, css, javascript. Desuden synes jeg det er spændende at idegenerere på forskellige problemer & emner. En af mine store forcer er at jeg ikke giver så let op. f.eks. hvis jeg har et kodning problem, så vil jeg løse det før jeg gør noget andet. Jeg har været vant til at arbejde i grupper siden gymnasiet, så jeg er vant til at arbejde i teams. Dog er jeg også god til at arbejde selvstændigt. </p>
 
                             <h4 class="text-center" style="color:black"><strong>Sprog</strong></h4>
-                            <ul>
+                            <ul class="skills_sprog">
                                 <li>Dansk</li>
                                 <li>Engelsk</li>
-                                <li>Html,Css & javascript</li>
+                                <li>Html, Css & javascript</li>
+                                <li>PHP, SQL, SASS</li>
                             </ul>
                         </div>
 
@@ -224,7 +233,7 @@
                             <br>
 
                             <h4><strong> PÅ MMD (KEA) har jeg arbejde med følgende</strong></h4>
-                            <ul style="list-style-type:disc">
+                            <ul style="list-style-type:disc" class="MMD_arbejde">
                                 <li>Målgruppeanalyser</li>
                                 <li>html, css, Bootstrap og javascript</li>
                                 <li>Design Teorier</li>
@@ -233,6 +242,15 @@
                                 <li>photoshop, illustrator, Indesign, Adobe XD</li>
                                 <li>Premiere Pro, After Effects & Audition</li>
                                 <li>Farveteori</li>
+                            </ul>
+
+                            <h4><strong> Som Webudvikler (KEA) har jeg arbejde med følgende</strong></h4>
+                            <ul style="list-style-type:disc" class="MMD_arbejde">
+                                <li>Database</li>
+                                <li>Interface design</li>
+                                <li>Angular</li>
+                                <li>Web Security</li>
+                                <li>Web Environment</li>
                             </ul>
 
 
@@ -249,6 +267,12 @@
                             <h4 style="margin-bottom:0px;"><strong> CollectorsHome - Webansvarlig </strong></h4>
 
                             <p> (Marts 2017 - )</p>
+
+                            <h4 style="margin-bottom:0px;"><strong> BetterHome - Praktikant </strong></h4>
+
+                            <p> (Januar - August 2019)</p>
+
+                            <br>
 
                             <img src="img/IT%20skills.png" alt="IT skills" class="img-responsive">
                         </div>
